test_regress/t/t_class_static_member_bad.out
%Error: t/t_class_static_member_bad.v:14:7: Cannot access non-static member variable 'member' from a static method 'static_func' without object (IEEE 1800-2023 8.10)
                                          : ... note: In instance 't'
   14 |       member = 1;
      |       ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
